--- a/ensemble_learning_random_forest/ensemble_e_random_forest.ipynb
+++ b/ensemble_learning_random_forest/ensemble_e_random_forest.ipynb
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7e5e3c89",
+   "id": "9e62e288",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb46d7b",
+   "id": "7441ef62",
    "metadata": {},
    "source": [
     "O hyperparametro learning_rate escala a contribuicao de cada arvore. Se setar para valores baixos como 0.1 <br>\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ce70e2a8",
+   "id": "6740ba85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6eb3ff89",
+   "id": "831b448e",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a0c52ba",
+   "id": "f0859269",
    "metadata": {},
    "source": [
     "Fazendo early stopping na mao seria da seguinte maneira"
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "30a17c03",
+   "id": "708b5bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8541e7d6",
+   "id": "9ecd3666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "22451e61",
+   "id": "b10a8a7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,13 +706,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "613b988c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\tvalidation_0-rmse:0.68782\n",
+      "[1]\tvalidation_0-rmse:0.49611\n",
+      "[2]\tvalidation_0-rmse:0.36554\n",
+      "[3]\tvalidation_0-rmse:0.28924\n",
+      "[4]\tvalidation_0-rmse:0.23379\n",
+      "[5]\tvalidation_0-rmse:0.21105\n",
+      "[6]\tvalidation_0-rmse:0.19163\n",
+      "[7]\tvalidation_0-rmse:0.18134\n",
+      "[8]\tvalidation_0-rmse:0.17584\n",
+      "[9]\tvalidation_0-rmse:0.17736\n",
+      "[10]\tvalidation_0-rmse:0.17914\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matheus/.local/lib/python3.10/site-packages/xgboost/sklearn.py:793: UserWarning: `early_stopping_rounds` in `fit` method is deprecated for better compatibility with scikit-learn, use `early_stopping_rounds` in constructor or`set_params` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_reg.fit(X_train, y_train, eval_set = [(X_val, y_val)], early_stopping_rounds = 2)\n",
+    "y_pred = xgb_reg.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9616bef",
+   "metadata": {},
+   "source": [
+    "## Stacking"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3594f271",
+   "id": "c28c129b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xgb_reg.fit(X_train, y_train, eval_set = [(X_val, y)])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
